Changelog
=========


1.2.2 (unreleased)
------------------

- Check for ftw.subsite installed before using its interface. [busykoala]


1.2.1 (2019-05-22)
------------------

- Fix edit permissions for addressblock [Nachtalb]
- Add zoomlevel and maplayers support for addressblocks [Nachtalb]


1.2.0 (2019-04-30)
------------------

- Add plone 5.1 support [busykoala]


1.1.2 (2019-02-07)
------------------

- The "Title" attribute should return utf8 encoded string instead of unicode. [mathias.leimgruber]

- Pin c.geo versions for plone 4.3.x [mathias.leimgruber]


1.1.1 (2017-11-27)
------------------

- Enable map for anonymous users. [lknoepfel]


1.1.0 (2017-08-09)
------------------

- Move base test classes to own module. [mbaechtold]


1.0.5 (2017-03-07)
------------------

- Make AddressBlock addable on plone site per default [raphael-s]


1.0.4 (2017-01-31)
------------------

- Make reading value of the address block's rich text fields more robust.
  [mbaechtold]

- Change string expr. to python expr in addressblock detail view.
  With Chameleon a string expression is evaluated different than without (& --> &amp;).
  [mathias.leimgruber]


1.0.3 (2016-11-01)
------------------

- Fix map marker on addressblock detail view.
  [mathias.leimgruber]


1.0.2 (2016-10-26)
------------------

- Make geo location adapter more robust for publisher compatibility. [jone]


1.0.1 (2016-08-26)
------------------

- Block is no longer searchable and will no longer be
  included in the navigation.
  [mbaechtold]

- Use mapblock js integration to prevent duplicated googlemaps api calls.
  [mathias.leimgruber]


1.0.0 (2016-08-10)
------------------

- Nothing changed yet