@@ -1,20 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_javascripts"
-        meta_type="JavaScripts Registry"
-        autogroup="False">
-
-    <javascript
-        id="++resource++ftw.addressblock.geo/addressblock.js"
-        enabled="True"
-        authenticated="True"
-        insert-after="++resource++ftw.simplelayout.resources/main.js"
-        />
-
-    <javascript
-        id="++resource++ftw.simplelayout.mapblock.resources/mapblock.js"
-        enabled="True"
-        authenticated="False"
-        insert-after="++resource++ftw.simplelayout.resources/main.js"
-        />
-
-</object>
