@@ -1,8 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:browser="http://namespaces.zope.org/browser"
-    i18n_domain="ftw.addressblock">
-
-    <browser:resourceDirectory name="ftw.addressblock.geo" directory="browser/resources"/>
-
-</configure>
