@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts"
+        meta_type="JavaScripts Registry"
+        autogroup="False">
+
+    <javascript
+        id="++resource++ftw.addressblock.geo/addressblock.js"
+        remove="True"
+        />
+
+</object>
